Backend bug fixed to keep group definition file format